manifests/apps/chatbot-ui/apps/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: chatbot-ui
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
spec:
